<resources>
    <string name="app_name">Kotlin Demo</string>
    <string name="title_activity_add_card">AddCardActivity</string>
    <string name="card_number">Card number:</string>
    <string name="card_expiry">Card expiry date:</string>
    <string name="card_number_placeholder">**** **** **** 4140</string>
    <string name="exp_date_text">/</string>
    <string name="expiry_month">mm</string>
    <string name="expiry_date">yy</string>
    <string name="card_cvc">Card CVC:</string>
    <string name="card_cvc_placeholder">999</string>
    <string name="add_user_text">Add user</string>
    <string name="add_user_token_text">Add user with Jet token</string>
    <string name="info_user_text">Info user</string>
    <string name="remove_user_text">Remove user</string>
    <string name="info_user_card_brand">Card brand:</string>
    <string name="card_type">Card type:</string>
    <string name="info_user_id">User id:</string>
    <string name="purchases">Purchases</string>
    <string name="select_user_text">Select user</string>
    <string name="add_card_text">Add card</string>
    <string name="dcc_purchases">Dcc Purchases</string>
    <string name="merchant_amount">Merchant amount:</string>
    <string name="merchant_amount2">(has to be multiplied by 100)</string>
    <string name="merchant_amount_hint">199</string>
    <string name="merchant_order">Merchant order:</string>
    <string name="merchant_order2"> (has to be unique)</string>
    <string name="merchant_order_hint">ux8@saL</string>
    <string name="merchant_currency">Merchant currency:</string>
    <string name="remove_card_text">Remove card</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="product_owner">Owner</string>
    <string name="product_scoring">Scoring</string>
    <string name="header_product_description">Description</string>
    <string name="header_product_owner">Owner</string>
    <string name="header_product_scoring">Scoring</string>
    <string name="header_product_price">Price</string>
    <string name="purchase_amount">Purchase amount</string>
    <string name="purchase_order">Purchase order</string>
</resources>
